# trust-engine

./: .gitignore  Cargo.toml  README.md
docker-api/: Cargo.toml  build.rs
docker-api/proto/docker/: docker.proto
docker-api/src/: server.rs
docker-api/src/docker_api/: client.rs  mod.rs  server.rs
socketJsTest/: docker-compose.yml  package.json
socketJsTest/src/: client.js  http_client.js  http_get.js  http_post.js  server.js
socketRsTest/: Cargo.toml
socketRsTest/src/: client.rs  client_get.rs  client_post.rs  server.rs
tonic-build/src/: lib.rs
vrfSocketService/: Cargo.toml
vrfSocketService/src/: main.rs  sortition.rs
vrfSocketService/src/sortition/: mod.rs
