[package]
name = "docker-api"
version = "0.1.0"
authors = ["Kevin Zhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"

[[bin]]
name = "docker-server"
path = "src/docker_api/server.rs"

[[bin]]
name = "docker-client"
path = "src/docker_api/client.rs"

[dependencies]
tonic = { path = "../tonic", features = ["rustls"] }
bytes = "0.4"
prost = "0.5"
prost-types = "*"
tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"

# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
docktape = { git = "https://github.com/kevingzhang/docktape-rs"}
[build-dependencies]
tonic-build = { path = "../tonic-build" }
