[package]
name = "vrfSocketService"
version = "0.1.0"
authors = ["kevingzhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vrf = {git = "https://github.com/kevingzhang/vrf-rs.git"}
url = "2.1.0"
hyper = "0.12.35"
hyperlocal = "0.6.0"
futures = "0.1.29"
hex = "0.4.0"
serde_json = "1.0.41"
dirs = "2.0.2"
openssl = "0.10.25"
secp256k1 = { version = "0.15.5", feature = "rand" }
